--- a/res/layout/listview.xml
+++ b/res/layout/listview.xml
@@ -7,7 +7,9 @@
 >
 
   <ImageView
+    android:contentDescription="Drink Image"
     android:id="@+id/icon"
+    android:src="@drawable/ic_launcher"
     android:padding="2dip"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -17,7 +19,8 @@
     android:id="@+id/label"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:textSize="20sp"
+    android:textSize="25sp"
+    android:layout_gravity="center"
   />
   
 </LinearLayout>
