--- a/res/layout/menulist.xml
+++ b/res/layout/menulist.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
+
     <LinearLayout
         android:id="@+id/linearLayout1"
         android:layout_width="match_parent"
@@ -11,10 +11,17 @@
 
         <TextView
             android:id="@+id/list"
+            android:layout_width="0dip"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.51"
+            />
+
+        <Button
+            android:id="@+id/buttonDelete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="X" />
-        <Button android:id="@+id/buttonDelete" android:layout_width="wrap_content" android:layout_height="wrap_content" android:onClick="deleteItem" android:text="X"/>
+            android:onClick="deleteItem"
+            android:text="@string/delete" />
     </LinearLayout>
     
 </LinearLayout>
